JavaDoc comments and code comments